@@ -1,3 +1,13 @@
+2007-10-02  Ralf Habecker  <ralf.habacker@freenet.de>
+
+	PR linker/4844
+	* ld-auto-import/auto-import.exp: Extend test to include running
+	the application and checking for some output.
+	* ld-auto-import/client.c (struct TEST): Include a variable field
+	with an offset.
+	(const_xyz): A const version of the xyz structure used to test the
+	initialization of constant data.
+
 2007-09-30  Mike Frysinger  <vapier@gentoo.org>
 
 	* ld-selective/selective.exp: Set $compiler based on $testtype and
